--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website-example",
   "version": "1.0.0",
-  "description": "Docker example showcasing an HTML website with Nginx, Bootstrap 4 and Docker.",
+  "description": "Docker example showcasing an HTML website with Nginx, Bootstrap 4, Webpack dev server and Docker.",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --port 8080 --hot --inline --host 0.0.0.0 --mode development",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-hot-loader": "^1.4.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
