--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
@@ -23,8 +24,6 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "bootstrap": "^4.1.2",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "bootstrap": "^4.1.2"
   }
 }
