--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "css-hot-loader": "^1.4.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
