--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --port 8080 --hot --inline --host 0.0.0.0 --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint:sass": "sass-lint -v -q --no-exit"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.1",
