--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ services:
 env:
   - DOCKER_COMPOSE_VERSION=1.22.0
 
+addons:
+  apt:
+    packages:
+      - docker-ce
+
 before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
