push to docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,9 @@ before_install:
 
 script:
   - docker-compose build
+
+after_success:
+  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
+      docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ;
+      docker-compose push;
+    fi
